syntax = "proto3";

package payment;

option go_package = "/payment_service";

service PaymentService {
  rpc BuyProduct (BuyProductRequest) returns (BuyProductResponse);
  rpc GetBallance (GetBalanceRequest) returns (GetBalanceResponse);
  rpc RegisterWallet (RegisterWalletRequest) returns (RegisterWalletResponse);
  rpc UpdateWallet (UpdateWalletRequest) returns (UpdateWalletResponse);
}

message BuyProductRequest {
  int32 walletIdBuyer = 1;
  int32 walletIdSeller = 2;
  double productPrice = 3;
  int32 productId = 4;
}

message BuyProductResponse {
  int32 code = 1;
  int32 OrderId = 2;
  string Address = 3;
  string SellerAddress = 4;
  double productPrice = 5;
}


message RegisterWalletRequest {
  string walletAddress = 1;
}

message RegisterWalletResponse {
    int32 code = 1;
    int32 walletId = 2;
    string message = 3;
}


message UpdateWalletRequest {
  int32 oldWalletId = 1;
  string newWalletAddress = 2;
}

message UpdateWalletResponse {
    int32 code = 1;
    int32 walletId = 2;
    string message = 3;
}



message GetBalanceRequest {
  int32 walletId = 1;
}

message GetBalanceResponse {
  int32 code = 1;
  double balance = 2;
  string message = 3;
}


//protoc --go_out=. --go-grpc_out=. payment_service.proto


